<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_sky_blue"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".NewRecipePage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_margin_60dp"
        android:background="@color/yellow"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/activity_margin_30dp"
            android:fontFamily="@font/akaya_telivigala"
            android:text="@string/get_creative_in_the_kitchen"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="@dimen/activity_margin_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:scrollbars="none"
        android:layout_weight="10"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/activity_margin_20dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_margin_35dp"
                android:textSize="@dimen/activity_margin_24dp"
                android:textStyle="bold"
                android:fontFamily="@font/akaya_telivigala"
                android:text="@string/title"
                android:textColor="@color/white"/>

            <EditText
                android:id="@+id/recipeName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_margin_50dp"
                android:background="@drawable/edit_text"
                android:singleLine="true"
                android:maxLines="1"
                android:maxLength="100"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:fontFamily="@font/akaya_telivigala"
                android:textSize="@dimen/activity_margin_16dp"
                android:hint="@string/what_s_the_name_of_your_mouthwatering_recipe"
                android:layout_margin="@dimen/activity_margin_5dp"
                android:padding="@dimen/activity_margin_10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_margin_35dp"
                android:textSize="@dimen/activity_margin_24dp"
                android:fontFamily="@font/akaya_telivigala"
                android:layout_marginTop="@dimen/activity_margin_15dp"
                android:text="@string/ingredients_to_be_added"
                android:textColor="@color/white"/>

            <EditText
                android:id="@+id/ingredientsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text"
                android:maxLength="100"
                android:minHeight="@dimen/activity_margin_150dp"
                android:gravity="start"
                android:textColor="@color/black"
                android:fontFamily="@font/akaya_telivigala"
                android:textSize="@dimen/activity_margin_18dp"
                android:hint="@string/your_ingredients_are_the_building_blocks_of_your_dish_tell_us_what_you_re_working_with"
                android:layout_margin="@dimen/activity_margin_5dp"
                android:padding="@dimen/activity_margin_10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_margin_35dp"
                android:textSize="@dimen/activity_margin_24dp"
                android:fontFamily="@font/akaya_telivigala"
                android:layout_marginTop="@dimen/activity_margin_15dp"
                android:text="@string/description"
                android:textColor="@color/white"/>

            <EditText
                android:id="@+id/procedure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text"
                android:maxLength="100"
                android:minHeight="@dimen/activity_margin_300dp"
                android:gravity="start"
                android:fontFamily="@font/akaya_telivigala"
                android:textSize="@dimen/activity_margin_18dp"
                android:hint="@string/whip_up_your_culinary_magic_and_share_the_recipe_love_with_us"
                android:layout_margin="@dimen/activity_margin_5dp"
                android:padding="@dimen/activity_margin_10dp"/>

        </LinearLayout>



        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_margin_50dp"
        android:orientation="horizontal"
        android:weightSum="2"
        >
        <Button
            android:id="@+id/backButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_margin_50dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:text="Back"
            android:textStyle="bold"
            android:textSize="@dimen/activity_margin_18dp"
            android:fontFamily="@font/akaya_telivigala"
            android:textAllCaps="false"
            android:background="@android:color/transparent"
            />
        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_margin_50dp"
            android:layout_weight="1"
            android:text="Save"
            android:fontFamily="@font/akaya_telivigala"
            android:textStyle="bold"
            android:textSize="@dimen/activity_margin_18dp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:background="@color/yellow"
            />

    </LinearLayout>

</LinearLayout>

<!--<TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/activity_margin_20dp"
                android:textStyle="bold"
                android:text="@string/share_a_picture_of_the_dish"
                android:textColor="@color/textgrey"/>-->